--- a/python_workflows/Data Cleaning.ipynb
+++ b/python_workflows/Data Cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
     "    mat_dict = {\n",
     "        \"periods\": mat['data'][0][0][0],\n",
     "        \"timelists_names\": mat['data'][0][0][1],\n",
-    "        \"stimuluskey_raw\": mat['data'][0][0][2],\n",
+    "        \"stimulus_key_raw\": mat['data'][0][0][2],\n",
     "        \"cell_XYZ\": mat['data'][0][0][3],\n",
     "        \"anat_stack\": mat['data'][0][0][4],\n",
     "        \"frame_per_sec\": mat['data'][0][0][5],\n",
@@ -60,13 +60,15 @@
     "        \"eye_full\": mat['data'][0][0][22],\n",
     "        \"eye_avr\": mat['data'][0][0][23]\n",
     "    }\n",
+    "    for key in mat_dict:\n",
+    "        print(key, mat_dict[key].shape)\n",
     "    with open(output_data_dir + subject + '_mat_dict.pickle', 'wb') as pickle_file:\n",
     "        pickle.dump(mat_dict, pickle_file, protocol=pickle.HIGHEST_PROTOCOL)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,21 +82,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting to save  subject_6 :  16:57:54.085091\n",
-      "Finished saving .mat, starting .h5 files:  16:57:57.655957\n",
-      "Saving  CellResp  in .h5 file:  16:57:57.665020\n",
-      "Saving  CellRespAvr  in .h5 file:  16:58:12.824868\n",
-      "Saving  CellRespAvrZ  in .h5 file:  16:58:13.785227\n",
-      "Saving  CellRespZ  in .h5 file:  16:58:14.249351\n",
-      "Saving  absIX  in .h5 file:  16:58:34.736420\n",
-      "Finished saving all files:  16:58:34.784283\n"
+      "Starting to save  subject_6 :  15:30:53.479678\n",
+      "periods (1, 1)\n",
+      "timelists_names (1, 1)\n",
+      "stimulus_key_raw (1, 4000)\n",
+      "cell_XYZ (93975, 3)\n",
+      "anat_stack (2048, 1188, 29)\n",
+      "frame_per_sec (1, 1)\n",
+      "behavior_raw (5, 4000)\n",
+      "num_cells (1, 1)\n",
+      "cell_XYZ_norm (93975, 3)\n",
+      "IX_inval_anat (1437, 1)\n",
+      "anat_yx (2048, 1188, 3)\n",
+      "anat_yz (2048, 29, 3)\n",
+      "anat_xz (29, 1188, 3)\n",
+      "timelists (1, 1)\n",
+      "stim_full (1, 3780)\n",
+      "stim_avr (1, 140)\n",
+      "behavior_full (5, 3780)\n",
+      "behavior_avr (5, 140)\n",
+      "behavior_full_motor (2, 3780)\n",
+      "behavior_avr_motor (2, 140)\n",
+      "eye_full_motorseed (2, 3780)\n",
+      "eye_avr_motorseed (2, 140)\n",
+      "eye_full (2, 3780)\n",
+      "eye_avr (2, 140)\n",
+      "Finished saving .mat, starting .h5 files:  15:30:55.296160\n",
+      "Saving  CellResp  in .h5 file:  15:30:55.311778\n",
+      "Saving  CellRespAvr  in .h5 file:  15:31:08.973946\n",
+      "Saving  CellRespAvrZ  in .h5 file:  15:31:11.590091\n",
+      "Saving  CellRespZ  in .h5 file:  15:31:12.037990\n",
+      "Saving  absIX  in .h5 file:  15:31:28.627389\n",
+      "Finished saving all files:  15:31:28.627389\n"
      ]
     }
    ],
