--- a/python_workflows/Data Raw to Pickled.ipynb
+++ b/python_workflows/Data Raw to Pickled.ipynb
@@ -23,12 +23,13 @@
    "source": [
     "data_dir = '../data/'\n",
     "input_data_dir = data_dir + 'data_raw_from_paper/'\n",
-    "output_data_dir = data_dir + 'data_raw_pickled/'"
+    "output_data_dir = data_dir + 'data_raw_pickled/'\n",
+    "meta_data_dir = data_dir + 'data_meta_pickled/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,135 +83,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting to save  subject_1 :  15:16:04.176767\n",
-      "Finished saving .mat, starting .h5 files:  15:16:06.253687\n",
-      "Saving  CellResp  in .h5 file:  15:16:06.277655\n",
-      "Saving  CellRespAvr  in .h5 file:  15:16:19.321049\n",
-      "Saving  CellRespAvrZ  in .h5 file:  15:16:21.281983\n",
-      "Saving  CellRespZ  in .h5 file:  15:16:23.444572\n",
-      "Saving  absIX  in .h5 file:  15:16:36.721542\n",
-      "Finished saving all files:  15:16:36.724532\n",
-      "Starting to save  subject_10 :  15:16:36.724532\n",
-      "Finished saving .mat, starting .h5 files:  15:16:38.731742\n",
-      "Saving  CellResp  in .h5 file:  15:16:38.756673\n",
-      "Saving  CellRespAvr  in .h5 file:  15:17:01.729151\n",
-      "Saving  CellRespAvrZ  in .h5 file:  15:17:07.533563\n",
-      "Saving  CellRespZ  in .h5 file:  15:17:15.133340\n",
-      "Saving  absIX  in .h5 file:  15:17:40.917729\n",
-      "Finished saving all files:  15:17:40.922778\n",
-      "Starting to save  subject_12 :  15:17:40.922778\n",
-      "Finished saving .mat, starting .h5 files:  15:17:43.438589\n",
-      "Saving  CellResp  in .h5 file:  15:17:43.532975\n",
-      "Saving  CellRespAvr  in .h5 file:  15:18:15.676458\n",
-      "Saving  CellRespAvrZ  in .h5 file:  15:18:27.668867\n",
-      "Saving  CellRespZ  in .h5 file:  15:18:38.733225\n",
-      "Saving  absIX  in .h5 file:  15:19:26.522027\n",
-      "Finished saving all files:  15:19:27.102760\n",
-      "Starting to save  subject_13 :  15:19:27.105754\n",
-      "Finished saving .mat, starting .h5 files:  15:19:29.115361\n",
-      "Saving  CellResp  in .h5 file:  15:19:29.350539\n",
-      "Saving  CellRespAvr  in .h5 file:  15:20:06.726191\n",
-      "Saving  CellRespAvrZ  in .h5 file:  15:20:15.819922\n",
-      "Saving  CellRespZ  in .h5 file:  15:20:23.495530\n",
-      "Saving  absIX  in .h5 file:  15:21:01.025069\n",
-      "Finished saving all files:  15:21:01.045016\n",
-      "Starting to save  subject_14 :  15:21:01.046025\n",
-      "Finished saving .mat, starting .h5 files:  15:21:05.003722\n",
-      "Saving  CellResp  in .h5 file:  15:21:05.098437\n",
-      "Saving  CellRespAvr  in .h5 file:  15:21:21.399330\n",
-      "Saving  CellRespAvrZ  in .h5 file:  15:21:24.999477\n",
-      "Saving  CellRespZ  in .h5 file:  15:21:28.531978\n",
-      "Saving  absIX  in .h5 file:  15:21:44.281681\n",
-      "Finished saving all files:  15:21:44.286667\n",
-      "Starting to save  subject_15 :  15:21:44.286667\n",
-      "Finished saving .mat, starting .h5 files:  15:21:46.562996\n",
-      "Saving  CellResp  in .h5 file:  15:21:46.610870\n",
-      "Saving  CellRespAvr  in .h5 file:  15:22:02.106705\n",
-      "Saving  CellRespAvrZ  in .h5 file:  15:22:03.600662\n",
-      "Saving  CellRespZ  in .h5 file:  15:22:05.185115\n",
-      "Saving  absIX  in .h5 file:  15:22:20.059878\n",
-      "Finished saving all files:  15:22:20.214466\n",
-      "Starting to save  subject_16 :  15:22:20.214466\n",
-      "Finished saving .mat, starting .h5 files:  15:22:23.148680\n",
-      "Saving  CellResp  in .h5 file:  15:22:23.234114\n",
-      "Saving  CellRespAvr  in .h5 file:  15:22:30.724080\n",
-      "Saving  CellRespAvrZ  in .h5 file:  15:22:33.183823\n",
-      "Saving  CellRespZ  in .h5 file:  15:22:35.470980\n",
-      "Saving  absIX  in .h5 file:  15:22:42.621841\n",
-      "Finished saving all files:  15:22:42.625799\n",
-      "Starting to save  subject_17 :  15:22:42.625799\n",
-      "Finished saving .mat, starting .h5 files:  15:22:44.742504\n",
-      "Saving  CellResp  in .h5 file:  15:22:44.766441\n",
-      "Saving  CellRespAvr  in .h5 file:  15:23:04.855666\n",
-      "Saving  CellRespAvrZ  in .h5 file:  15:23:07.168188\n",
-      "Saving  CellRespZ  in .h5 file:  15:23:10.455454\n",
-      "Saving  absIX  in .h5 file:  15:23:29.894221\n",
-      "Finished saving all files:  15:23:29.900206\n",
-      "Starting to save  subject_2 :  15:23:29.900206\n",
-      "Finished saving .mat, starting .h5 files:  15:23:31.869938\n",
-      "Saving  CellResp  in .h5 file:  15:23:31.937786\n",
-      "Saving  CellRespAvr  in .h5 file:  15:23:49.443637\n",
-      "Saving  CellRespAvrZ  in .h5 file:  15:23:50.256736\n",
-      "Saving  CellRespZ  in .h5 file:  15:23:50.986859\n",
-      "Saving  absIX  in .h5 file:  15:24:08.594983\n",
-      "Finished saving all files:  15:24:08.598972\n",
-      "Starting to save  subject_3 :  15:24:08.598972\n",
-      "Finished saving .mat, starting .h5 files:  15:24:11.288850\n",
-      "Saving  CellResp  in .h5 file:  15:24:11.428895\n",
-      "Saving  CellRespAvr  in .h5 file:  15:24:32.670923\n",
-      "Saving  CellRespAvrZ  in .h5 file:  15:24:35.042916\n",
-      "Saving  CellRespZ  in .h5 file:  15:24:36.228974\n",
-      "Saving  absIX  in .h5 file:  15:24:51.744289\n",
-      "Finished saving all files:  15:24:51.749277\n",
-      "Starting to save  subject_4 :  15:24:51.749277\n",
-      "Finished saving .mat, starting .h5 files:  15:24:54.201413\n",
-      "Saving  CellResp  in .h5 file:  15:24:54.262538\n",
-      "Saving  CellRespAvr  in .h5 file:  15:25:09.845381\n",
-      "Saving  CellRespAvrZ  in .h5 file:  15:25:11.560221\n",
-      "Saving  CellRespZ  in .h5 file:  15:25:13.436354\n",
-      "Saving  absIX  in .h5 file:  15:25:39.274597\n",
-      "Finished saving all files:  15:25:39.278587\n",
-      "Starting to save  subject_5 :  15:25:39.278587\n",
-      "Finished saving .mat, starting .h5 files:  15:25:41.395015\n",
-      "Saving  CellResp  in .h5 file:  15:25:41.499353\n",
-      "Saving  CellRespAvr  in .h5 file:  15:25:57.064376\n",
-      "Saving  CellRespAvrZ  in .h5 file:  15:25:59.861941\n",
-      "Saving  CellRespZ  in .h5 file:  15:26:02.675034\n",
-      "Saving  absIX  in .h5 file:  15:26:20.937948\n",
-      "Finished saving all files:  15:26:20.941938\n",
-      "Starting to save  subject_6 :  15:26:20.941938\n",
-      "Finished saving .mat, starting .h5 files:  15:26:23.413087\n",
-      "Saving  CellResp  in .h5 file:  15:26:23.626848\n",
-      "Saving  CellRespAvr  in .h5 file:  15:26:45.613448\n",
-      "Saving  CellRespAvrZ  in .h5 file:  15:26:47.578472\n",
-      "Saving  CellRespZ  in .h5 file:  15:26:48.982048\n",
-      "Saving  absIX  in .h5 file:  15:27:18.570459\n",
-      "Finished saving all files:  15:27:18.576444\n",
-      "Starting to save  subject_7 :  15:27:18.576444\n",
-      "Finished saving .mat, starting .h5 files:  15:27:22.001863\n",
-      "Saving  CellResp  in .h5 file:  15:27:22.059910\n",
-      "Saving  CellRespAvr  in .h5 file:  15:27:33.909732\n",
-      "Saving  CellRespAvrZ  in .h5 file:  15:27:35.386175\n",
-      "Saving  CellRespZ  in .h5 file:  15:27:36.539899\n",
-      "Saving  absIX  in .h5 file:  15:27:48.544269\n",
-      "Finished saving all files:  15:27:48.550253\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "subject_array = []\n",
+    "def add_subject_to_array(subject):\n",
+    "    subject_array.append(subject)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for subject in os.listdir(path = input_data_dir):\n",
     "    print('Starting to save ', subject, ': ', datetime.now().time())\n",
     "    save_mat_data(input_data_dir + subject + '/data_full.mat', subject)\n",
     "    print('Finished saving .mat, starting .h5 files: ', datetime.now().time())\n",
     "    save_h5_data(input_data_dir + subject + '/TimeSeries.h5', subject)\n",
-    "    print('Finished saving all files: ', datetime.now().time())"
+    "    print('Finished saving all files: ', datetime.now().time())\n",
+    "    add_subject_to_array(subject)\n",
+    "subject_array.sort()\n",
+    "with open(meta_data_dir + 'subject_array.pickle', 'wb') as pickle_file:\n",
+    "    pickle.dump(subject_array, pickle_file, protocol=pickle.HIGHEST_PROTOCOL)"
    ]
   },
   {
@@ -237,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
