Finished splitting data based on stimulation.

--- a/python_workflows/Split Stimulus Data.ipynb
+++ b/python_workflows/Split Stimulus Data.ipynb
@@ -16,7 +16,8 @@
    "source": [
     "import os\n",
     "import pickle\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -67,9 +68,46 @@
     "    with open(data_dir + subject + '_CellRespZ.pickle', \"rb\") as input_file:\n",
     "        timeseries = pickle.load(input_file)\n",
     "    with open(data_dir + subject + '_mat_dict.pickle', \"rb\") as input_file:\n",
-    "        mat = pickle.load(input_file)\n",
-    "        stim_shape = np.unique(mat['stim_full'], return_counts=True)\n",
-    "    return timeseries, stim_shape"
+    "        stimulus = pickle.load(input_file)['stim_full']\n",
+    "    return timeseries, stimulus, np.unique(stimulus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_data_df(timeseries, stimulus):\n",
+    "    df = pd.DataFrame(timeseries)\n",
+    "    df['stimulus'] = np.resize(stimulus, (stimulus.size, 1))\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_data(df, stimulus_values):\n",
+    "    return_dict = {}\n",
+    "    for stimulus in stimulus_values:\n",
+    "        stim_data = df.loc[df['stimulus'] == stimulus]\n",
+    "        del stim_data['stimulus']\n",
+    "        return_dict[stimulus] = stim_data.to_numpy()\n",
+    "    return return_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_split_data(subject, stimulus, data):\n",
+    "    with open(data_dir + subject + '_stimulus_' + stimulus + '_CellRespZ.pickle', 'wb') as pickle_file:\n",
+    "        pickle.dump(data, pickle_file, protocol=pickle.HIGHEST_PROTOCOL)"
    ]
   },
   {
@@ -81,57 +119,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "subject_1  timeseries:  (2880, 83205)\n",
-      "subject_1  stimulus full  (array([0, 1, 2, 3], dtype=uint8), array([720, 720, 720, 720], dtype=int64))\n",
-      "subject_10  timeseries:  (4426, 83396)\n",
-      "subject_10  stimulus full  (array([ 0,  1,  2,  3,  4,  9, 10, 11, 12, 13, 14, 15, 16, 21, 22, 23],\n",
-      "      dtype=uint8), array([204, 300, 300, 780, 720, 630, 220, 220, 220, 202,  40,  40,  50,\n",
-      "       150, 150, 200], dtype=int64))\n",
-      "subject_12  timeseries:  (6140, 58105)\n",
-      "subject_12  stimulus full  (array([ 0,  1,  2,  3,  4,  9, 10, 11, 12, 14, 15], dtype=uint8), array([ 500,  800,  800, 2750,  640,  150,  150,  150,  150,   25,   25],\n",
-      "      dtype=int64))\n",
-      "subject_13  timeseries:  (4840, 73202)\n",
-      "subject_13  stimulus full  (array([ 0,  1,  2,  3,  4,  9, 10, 11, 12, 14, 15], dtype=uint8), array([ 270,  440,  440, 2090, 1200,   50,   50,   50,   50,  100,  100],\n",
-      "      dtype=int64))\n",
-      "subject_14  timeseries:  (3890, 72412)\n",
-      "subject_14  stimulus full  (array([ 0,  1,  2,  3,  4,  9, 10, 11, 12, 14, 15], dtype=uint8), array([ 175,  640,  640, 1735,  500,   30,   30,   30,   30,   40,   40],\n",
-      "      dtype=int64))\n",
-      "subject_15  timeseries:  (4880, 53180)\n",
-      "subject_15  stimulus full  (array([ 0,  1,  2,  3,  4,  9, 10, 11, 12, 14, 15], dtype=uint8), array([ 330,  725,  725, 1440,  600,  240,  240,  240,  240,   50,   50],\n",
-      "      dtype=int64))\n",
-      "subject_16  timeseries:  (1877, 62737)\n",
-      "subject_16  stimulus full  (array([ 1,  2,  3,  4,  9, 10, 11, 12], dtype=uint8), array([300, 300, 440, 517,  80,  80,  80,  80], dtype=int64))\n",
-      "subject_17  timeseries:  (5554, 63922)\n",
-      "subject_17  stimulus full  (array([ 0,  1,  2,  3,  4,  9, 10, 11, 12, 14, 15], dtype=uint8), array([ 352,  783,  783, 1968,  800,  192,  192,  192,  192,   50,   50],\n",
-      "      dtype=int64))\n",
-      "subject_2  timeseries:  (3520, 82514)\n",
-      "subject_2  stimulus full  (array([0, 1, 2, 3], dtype=uint8), array([880, 880, 880, 880], dtype=int64))\n",
-      "subject_3  timeseries:  (2560, 83662)\n",
-      "subject_3  stimulus full  (array([0, 1, 2, 3], dtype=uint8), array([640, 640, 640, 640], dtype=int64))\n",
-      "subject_4  timeseries:  (2880, 90034)\n",
-      "subject_4  stimulus full  (array([0, 1, 2, 3], dtype=uint8), array([720, 720, 720, 720], dtype=int64))\n",
-      "subject_5  timeseries:  (2880, 97766)\n",
-      "subject_5  stimulus full  (array([0, 1, 2, 3], dtype=uint8), array([720, 720, 720, 720], dtype=int64))\n",
-      "subject_6  timeseries:  (3780, 92538)\n",
-      "subject_6  stimulus full  (array([1, 2, 3], dtype=uint8), array([1080, 1080, 1620], dtype=int64))\n",
-      "subject_7  timeseries:  (1650, 93810)\n",
-      "subject_7  stimulus full  (array([1, 2, 3], dtype=uint8), array([550, 550, 550], dtype=int64))\n"
+      "Saved key  0  in  subject_1\n",
+      "Saved key  1  in  subject_1\n",
+      "Saved key  2  in  subject_1\n",
+      "Saved key  3  in  subject_1\n",
+      "Saved key  0  in  subject_10\n",
+      "Saved key  1  in  subject_10\n",
+      "Saved key  2  in  subject_10\n",
+      "Saved key  3  in  subject_10\n",
+      "Saved key  4  in  subject_10\n",
+      "Saved key  9  in  subject_10\n",
+      "Saved key  10  in  subject_10\n",
+      "Saved key  11  in  subject_10\n",
+      "Saved key  12  in  subject_10\n",
+      "Saved key  13  in  subject_10\n",
+      "Saved key  14  in  subject_10\n",
+      "Saved key  15  in  subject_10\n",
+      "Saved key  16  in  subject_10\n",
+      "Saved key  21  in  subject_10\n",
+      "Saved key  22  in  subject_10\n",
+      "Saved key  23  in  subject_10\n",
+      "Saved key  0  in  subject_12\n",
+      "Saved key  1  in  subject_12\n",
+      "Saved key  2  in  subject_12\n",
+      "Saved key  3  in  subject_12\n",
+      "Saved key  4  in  subject_12\n",
+      "Saved key  9  in  subject_12\n",
+      "Saved key  10  in  subject_12\n",
+      "Saved key  11  in  subject_12\n",
+      "Saved key  12  in  subject_12\n",
+      "Saved key  14  in  subject_12\n",
+      "Saved key  15  in  subject_12\n",
+      "Saved key  0  in  subject_13\n",
+      "Saved key  1  in  subject_13\n",
+      "Saved key  2  in  subject_13\n",
+      "Saved key  3  in  subject_13\n",
+      "Saved key  4  in  subject_13\n",
+      "Saved key  9  in  subject_13\n",
+      "Saved key  10  in  subject_13\n",
+      "Saved key  11  in  subject_13\n",
+      "Saved key  12  in  subject_13\n",
+      "Saved key  14  in  subject_13\n",
+      "Saved key  15  in  subject_13\n",
+      "Saved key  0  in  subject_14\n",
+      "Saved key  1  in  subject_14\n",
+      "Saved key  2  in  subject_14\n",
+      "Saved key  3  in  subject_14\n",
+      "Saved key  4  in  subject_14\n",
+      "Saved key  9  in  subject_14\n",
+      "Saved key  10  in  subject_14\n",
+      "Saved key  11  in  subject_14\n",
+      "Saved key  12  in  subject_14\n",
+      "Saved key  14  in  subject_14\n",
+      "Saved key  15  in  subject_14\n",
+      "Saved key  0  in  subject_15\n",
+      "Saved key  1  in  subject_15\n",
+      "Saved key  2  in  subject_15\n",
+      "Saved key  3  in  subject_15\n",
+      "Saved key  4  in  subject_15\n",
+      "Saved key  9  in  subject_15\n",
+      "Saved key  10  in  subject_15\n",
+      "Saved key  11  in  subject_15\n",
+      "Saved key  12  in  subject_15\n",
+      "Saved key  14  in  subject_15\n",
+      "Saved key  15  in  subject_15\n",
+      "Saved key  1  in  subject_16\n",
+      "Saved key  2  in  subject_16\n",
+      "Saved key  3  in  subject_16\n",
+      "Saved key  4  in  subject_16\n",
+      "Saved key  9  in  subject_16\n",
+      "Saved key  10  in  subject_16\n",
+      "Saved key  11  in  subject_16\n",
+      "Saved key  12  in  subject_16\n",
+      "Saved key  0  in  subject_17\n",
+      "Saved key  1  in  subject_17\n",
+      "Saved key  2  in  subject_17\n",
+      "Saved key  3  in  subject_17\n",
+      "Saved key  4  in  subject_17\n",
+      "Saved key  9  in  subject_17\n",
+      "Saved key  10  in  subject_17\n",
+      "Saved key  11  in  subject_17\n",
+      "Saved key  12  in  subject_17\n",
+      "Saved key  14  in  subject_17\n",
+      "Saved key  15  in  subject_17\n",
+      "Saved key  0  in  subject_2\n",
+      "Saved key  1  in  subject_2\n",
+      "Saved key  2  in  subject_2\n",
+      "Saved key  3  in  subject_2\n",
+      "Saved key  0  in  subject_3\n",
+      "Saved key  1  in  subject_3\n",
+      "Saved key  2  in  subject_3\n",
+      "Saved key  3  in  subject_3\n",
+      "Saved key  0  in  subject_4\n",
+      "Saved key  1  in  subject_4\n",
+      "Saved key  2  in  subject_4\n",
+      "Saved key  3  in  subject_4\n",
+      "Saved key  0  in  subject_5\n",
+      "Saved key  1  in  subject_5\n",
+      "Saved key  2  in  subject_5\n",
+      "Saved key  3  in  subject_5\n",
+      "Saved key  1  in  subject_6\n",
+      "Saved key  2  in  subject_6\n",
+      "Saved key  3  in  subject_6\n",
+      "Saved key  1  in  subject_7\n",
+      "Saved key  2  in  subject_7\n",
+      "Saved key  3  in  subject_7\n"
      ]
     }
    ],
    "source": [
     "for subject in subject_array:\n",
-    "    timeseries, stim_shape = load_subject_data(subject)\n",
-    "    print(subject, ' timeseries: ', timeseries.shape)\n",
-    "    print(subject, ' stimulus full ', stim_shape)"
+    "    timeseries, stimulus, stimulus_values = load_subject_data(subject)\n",
+    "    df_full = create_data_df(timeseries, stimulus)\n",
+    "    split_data_dict = split_data(df_full, stimulus_values)\n",
+    "    for key, data in split_data_dict.items():\n",
+    "        save_split_data(subject, str(key), data)\n",
+    "        print('Saved key ', key, ' in ', subject)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
