Code reviewed and cleaned raw data pickling script

--- a/python_workflows/01 Data Raw to Pickled.ipynb
+++ b/python_workflows/01 Data Raw to Pickled.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Raw Data Pickling Function\n",
+    "This code pickles raw data downloaded from [Chen et al](https://janelia.figshare.com/articles/Whole-brain_light-sheet_imaging_data/7272617) and converts them into Pandas, Numpy, and Python objects.\n",
+    "\n",
+    "To ensure function, load all raw data into [../data/data_raw_from_paper](../data/data_raw_from_paper)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -109,13 +119,6 @@
     "with open(meta_data_dir + 'subject_array.pickle', 'wb') as pickle_file:\n",
     "    pickle.dump(subject_array, pickle_file, protocol=pickle.HIGHEST_PROTOCOL)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -134,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
