Code reviews 01, 02, ran and saved.

--- a/python_workflows/01 Data Raw to Pickled.ipynb
+++ b/python_workflows/01 Data Raw to Pickled.ipynb
@@ -16,13 +16,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import scipy.io as scio\n",
     "import h5py\n",
-    "import pickle\n",
-    "from datetime import datetime"
+    "from util_functions import list_subjects, pickle_file, starting_run, finished_run"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Notebook Parameters"
    ]
   },
   {
@@ -31,10 +36,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = '../data/'\n",
-    "input_data_dir = data_dir + 'data_raw_from_paper/'\n",
-    "output_data_dir = data_dir + 'data_raw_pickled/'\n",
-    "meta_data_dir = data_dir + 'data_meta_pickled/'"
+    "output_data_dir = 'data_raw_pickled/'\n",
+    "data_raw_pickled_df = pd.DataFrame(columns=['subject', 'stimulus', 'rel_path', 'timepoints_count',  'timepoints'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Notebook Functions"
    ]
   },
   {
@@ -71,10 +81,7 @@
     "#         \"eye_full\": mat['data'][0][0][22],\n",
     "#         \"eye_avr\": mat['data'][0][0][23]\n",
     "    }\n",
-    "#     for key in mat_dict:\n",
-    "#         print(key, mat_dict[key].shape)\n",
-    "    with open(output_data_dir + subject + '_mat_dict.pickle', 'wb') as pickle_file:\n",
-    "        pickle.dump(mat_dict, pickle_file, protocol=pickle.HIGHEST_PROTOCOL)"
+    "    pickle_file(output_data_dir + subject + '_mat_dict.pickle', mat_dict)"
    ]
   },
   {
@@ -86,38 +93,48 @@
     "def save_h5_data(path, subject):\n",
     "    f = h5py.File(path, 'r')\n",
     "    for key in f.keys():\n",
-    "        print('Saving ', key, ' in .h5 file: ', datetime.now().time())\n",
-    "        with open(output_data_dir + subject + '_' + key + '.pickle', 'wb') as pickle_file:\n",
-    "            pickle.dump(pd.DataFrame(np.array(f[key])), pickle_file, protocol=pickle.HIGHEST_PROTOCOL)"
+    "        save_path = output_data_dir + subject + '_' + key + '.pickle'\n",
+    "        pickle_file(save_path, np.array(f[key]))\n",
+    "        if key == 'CellRespZ':\n",
+    "            data_raw_pickled_df.loc[subject] = [subject, None, save_path, np.array(f[key]).shape, None]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting save subject_1 16:11:43.568480\n",
+      "Starting save subject_10 16:11:52.914547\n",
+      "Starting save subject_12 16:12:07.243676\n",
+      "Starting save subject_13 16:12:20.625531\n",
+      "Starting save subject_14 16:12:33.534627\n",
+      "Starting save subject_15 16:12:44.479386\n",
+      "Starting save subject_16 16:12:53.924326\n",
+      "Starting save subject_17 16:12:59.593224\n",
+      "Starting save subject_18 16:13:14.778975\n",
+      "Starting save subject_2 16:13:33.269163\n",
+      "Starting save subject_3 16:13:43.491465\n",
+      "Starting save subject_4 16:13:51.267467\n",
+      "Starting save subject_5 16:14:00.912230\n",
+      "Starting save subject_6 16:14:11.511444\n",
+      "Starting save subject_7 16:14:23.712471\n",
+      "Finished saving raw data 16:14:30.591768\n"
+     ]
+    }
+   ],
    "source": [
-    "subject_array = []\n",
-    "def add_subject_to_array(subject):\n",
-    "    subject_array.append(subject)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for subject in os.listdir(path = input_data_dir):\n",
-    "    print('Starting to save ', subject, ': ', datetime.now().time())\n",
-    "    save_mat_data(input_data_dir + subject + '/data_full.mat', subject)\n",
-    "    print('Finished saving .mat, starting .h5 files: ', datetime.now().time())\n",
-    "    save_h5_data(input_data_dir + subject + '/TimeSeries.h5', subject)\n",
-    "    print('Finished saving all files: ', datetime.now().time())\n",
-    "    add_subject_to_array(subject)\n",
-    "subject_array.sort()\n",
-    "with open(meta_data_dir + 'subject_array.pickle', 'wb') as pickle_file:\n",
-    "    pickle.dump(subject_array, pickle_file, protocol=pickle.HIGHEST_PROTOCOL)"
+    "for subject in list_subjects():\n",
+    "    subject_input_path = '../data/data_raw_from_paper/'+subject+'/'+subject\n",
+    "    starting_run('save ' + subject)\n",
+    "    save_mat_data(subject_input_path + '/data_full.mat', subject)\n",
+    "    save_h5_data(subject_input_path + '/TimeSeries.h5', subject)\n",
+    "finished_run('saving raw data')\n",
+    "pickle_file('data_meta_pickled/data_raw_pickled_df.pickle', data_raw_pickled_df)"
    ]
   }
  ],
