--- a/python_workflows/02 Split Stimulus Data.ipynb
+++ b/python_workflows/02 Split Stimulus Data.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from util_functions import list_subjects, load_file, pickle_file, get_current_time"
+    "from util_functions import list_subjects, load_file, pickle_file, starting_run, finished_run"
    ]
   },
   {
@@ -34,6 +34,7 @@
    },
    "outputs": [],
    "source": [
+    "data_raw_pickled_df = load_file('data_meta_pickled/data_raw_pickled_df.pickle')\n",
     "data_dir = 'data_raw_pickled/'"
    ]
   },
@@ -86,10 +87,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_stim_data(subject, stimulus, data, agg_df):\n",
+    "def save_stim_data(subject, stimulus, data, data_raw_pickled_df):\n",
     "    stimulus = str(stimulus)\n",
     "    save_path = data_dir + subject + '_stimulus_' + stimulus + '_CellRespZ.pickle'\n",
-    "    agg_df.loc[subject + stimulus] = [subject, stimulus, save_path, data.shape[0], data.index]\n",
+    "    data_raw_pickled_df.loc[subject + stimulus] = [subject, stimulus, save_path, data.shape[0], data.index]\n",
     "    print('Saving ', subject, ' Stimulus ', stimulus)\n",
     "    pickle_file(save_path, data.to_numpy())"
    ]
@@ -110,7 +111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting  19:12:42.071750\n",
+      "Starting  16:16:58.719382\n",
       "Saving  subject_1  Stimulus  0\n",
       "Saving  subject_1  Stimulus  1\n",
       "Saving  subject_1  Stimulus  2\n",
@@ -194,6 +195,17 @@
       "Saving  subject_17  Stimulus  12\n",
       "Saving  subject_17  Stimulus  14\n",
       "Saving  subject_17  Stimulus  15\n",
+      "Saving  subject_18  Stimulus  0\n",
+      "Saving  subject_18  Stimulus  1\n",
+      "Saving  subject_18  Stimulus  2\n",
+      "Saving  subject_18  Stimulus  3\n",
+      "Saving  subject_18  Stimulus  4\n",
+      "Saving  subject_18  Stimulus  9\n",
+      "Saving  subject_18  Stimulus  10\n",
+      "Saving  subject_18  Stimulus  11\n",
+      "Saving  subject_18  Stimulus  12\n",
+      "Saving  subject_18  Stimulus  14\n",
+      "Saving  subject_18  Stimulus  15\n",
       "Saving  subject_2  Stimulus  0\n",
       "Saving  subject_2  Stimulus  1\n",
       "Saving  subject_2  Stimulus  2\n",
@@ -216,7 +228,7 @@
       "Saving  subject_7  Stimulus  1\n",
       "Saving  subject_7  Stimulus  2\n",
       "Saving  subject_7  Stimulus  3\n",
-      "Finished  19:13:43.635456\n"
+      "Finished  16:18:15.887607\n"
      ]
     },
     {
@@ -249,20 +261,20 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>subject_1</th>\n",
+       "      <td>subject_1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>data_raw_pickled/subject_1_CellRespZ.pickle</td>\n",
+       "      <td>(2880, 83205)</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>subject_10</th>\n",
        "      <td>subject_1</td>\n",
        "      <td>0</td>\n",
        "      <td>data_raw_pickled/subject_1_stimulus_0_CellResp...</td>\n",
        "      <td>720</td>\n",
        "      <td>Int64Index([ 150,  151,  152,  153,  154,  155...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>subject_11</th>\n",
-       "      <td>subject_1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>data_raw_pickled/subject_1_stimulus_1_CellResp...</td>\n",
-       "      <td>720</td>\n",
-       "      <td>Int64Index([  60,   61,   62,   63,   64,   65...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>subject_12</th>\n",
@@ -281,12 +293,12 @@
        "      <td>Int64Index([  30,   31,   32,   33,   34,   35...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>subject_100</th>\n",
-       "      <td>subject_10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>data_raw_pickled/subject_10_stimulus_0_CellRes...</td>\n",
-       "      <td>204</td>\n",
-       "      <td>Int64Index([1580, 1581, 1582, 1583, 1584, 1585...</td>\n",
+       "      <th>subject_14</th>\n",
+       "      <td>subject_14</td>\n",
+       "      <td>None</td>\n",
+       "      <td>data_raw_pickled/subject_14_CellRespZ.pickle</td>\n",
+       "      <td>(3890, 72412)</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -338,63 +350,50 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>105 rows × 5 columns</p>\n",
+       "<p>128 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                subject stimulus  \\\n",
-       "subject_10    subject_1        0   \n",
-       "subject_11    subject_1        1   \n",
-       "subject_12    subject_1        2   \n",
-       "subject_13    subject_1        3   \n",
-       "subject_100  subject_10        0   \n",
-       "...                 ...      ...   \n",
-       "subject_62    subject_6        2   \n",
-       "subject_63    subject_6        3   \n",
-       "subject_71    subject_7        1   \n",
-       "subject_72    subject_7        2   \n",
-       "subject_73    subject_7        3   \n",
+       "               subject stimulus  \\\n",
+       "subject_1    subject_1     None   \n",
+       "subject_10   subject_1        0   \n",
+       "subject_12   subject_1        2   \n",
+       "subject_13   subject_1        3   \n",
+       "subject_14  subject_14     None   \n",
+       "...                ...      ...   \n",
+       "subject_62   subject_6        2   \n",
+       "subject_63   subject_6        3   \n",
+       "subject_71   subject_7        1   \n",
+       "subject_72   subject_7        2   \n",
+       "subject_73   subject_7        3   \n",
        "\n",
-       "                                                      rel_path  \\\n",
-       "subject_10   data_raw_pickled/subject_1_stimulus_0_CellResp...   \n",
-       "subject_11   data_raw_pickled/subject_1_stimulus_1_CellResp...   \n",
-       "subject_12   data_raw_pickled/subject_1_stimulus_2_CellResp...   \n",
-       "subject_13   data_raw_pickled/subject_1_stimulus_3_CellResp...   \n",
-       "subject_100  data_raw_pickled/subject_10_stimulus_0_CellRes...   \n",
-       "...                                                        ...   \n",
-       "subject_62   data_raw_pickled/subject_6_stimulus_2_CellResp...   \n",
-       "subject_63   data_raw_pickled/subject_6_stimulus_3_CellResp...   \n",
-       "subject_71   data_raw_pickled/subject_7_stimulus_1_CellResp...   \n",
-       "subject_72   data_raw_pickled/subject_7_stimulus_2_CellResp...   \n",
-       "subject_73   data_raw_pickled/subject_7_stimulus_3_CellResp...   \n",
+       "                                                     rel_path  \\\n",
+       "subject_1         data_raw_pickled/subject_1_CellRespZ.pickle   \n",
+       "subject_10  data_raw_pickled/subject_1_stimulus_0_CellResp...   \n",
+       "subject_12  data_raw_pickled/subject_1_stimulus_2_CellResp...   \n",
+       "subject_13  data_raw_pickled/subject_1_stimulus_3_CellResp...   \n",
+       "subject_14       data_raw_pickled/subject_14_CellRespZ.pickle   \n",
+       "...                                                       ...   \n",
+       "subject_62  data_raw_pickled/subject_6_stimulus_2_CellResp...   \n",
+       "subject_63  data_raw_pickled/subject_6_stimulus_3_CellResp...   \n",
+       "subject_71  data_raw_pickled/subject_7_stimulus_1_CellResp...   \n",
+       "subject_72  data_raw_pickled/subject_7_stimulus_2_CellResp...   \n",
+       "subject_73  data_raw_pickled/subject_7_stimulus_3_CellResp...   \n",
        "\n",
-       "            timepoints_count  \\\n",
-       "subject_10               720   \n",
-       "subject_11               720   \n",
-       "subject_12               720   \n",
-       "subject_13               720   \n",
-       "subject_100              204   \n",
-       "...                      ...   \n",
-       "subject_62              1080   \n",
-       "subject_63              1620   \n",
-       "subject_71               550   \n",
-       "subject_72               550   \n",
-       "subject_73               550   \n",
+       "           timepoints_count                                         timepoints  \n",
+       "subject_1     (2880, 83205)                                               None  \n",
+       "subject_10              720  Int64Index([ 150,  151,  152,  153,  154,  155...  \n",
+       "subject_12              720  Int64Index([   0,    1,    2,    3,    4,    5...  \n",
+       "subject_13              720  Int64Index([  30,   31,   32,   33,   34,   35...  \n",
+       "subject_14    (3890, 72412)                                               None  \n",
+       "...                     ...                                                ...  \n",
+       "subject_62             1080  Int64Index([ 100,  101,  102,  103,  104,  105...  \n",
+       "subject_63             1620  Int64Index([   0,    1,    2,    3,    4,    5...  \n",
+       "subject_71              550  Int64Index([  24,   25,   26,   27,   28,   29...  \n",
+       "subject_72              550  Int64Index([  99,  100,  101,  102,  103,  104...  \n",
+       "subject_73              550  Int64Index([   0,    1,    2,    3,    4,    5...  \n",
        "\n",
-       "                                                    timepoints  \n",
-       "subject_10   Int64Index([ 150,  151,  152,  153,  154,  155...  \n",
-       "subject_11   Int64Index([  60,   61,   62,   63,   64,   65...  \n",
-       "subject_12   Int64Index([   0,    1,    2,    3,    4,    5...  \n",
-       "subject_13   Int64Index([  30,   31,   32,   33,   34,   35...  \n",
-       "subject_100  Int64Index([1580, 1581, 1582, 1583, 1584, 1585...  \n",
-       "...                                                        ...  \n",
-       "subject_62   Int64Index([ 100,  101,  102,  103,  104,  105...  \n",
-       "subject_63   Int64Index([   0,    1,    2,    3,    4,    5...  \n",
-       "subject_71   Int64Index([  24,   25,   26,   27,   28,   29...  \n",
-       "subject_72   Int64Index([  99,  100,  101,  102,  103,  104...  \n",
-       "subject_73   Int64Index([   0,    1,    2,    3,    4,    5...  \n",
-       "\n",
-       "[105 rows x 5 columns]"
+       "[128 rows x 5 columns]"
       ]
      },
      "execution_count": 7,
@@ -403,16 +402,15 @@
     }
    ],
    "source": [
-    "print('Starting ', get_current_time())\n",
-    "agg_df = pd.DataFrame(columns=['subject', 'stimulus', 'rel_path', 'timepoints_count',  'timepoints'])\n",
+    "starting_run()\n",
     "for subject in list_subjects():\n",
     "    timeseries, stimulus_timeseries, stimulus_values = load_subject_data(subject)\n",
     "    df_full = create_data_df(timeseries, stimulus_timeseries)\n",
     "    for stimulus in stimulus_values:\n",
     "        stim_data = extract_stimulus_data(df_full, stimulus)\n",
-    "        save_stim_data(subject, stimulus, stim_data, agg_df)\n",
-    "print('Finished ', get_current_time())\n",
-    "agg_df"
+    "        save_stim_data(subject, stimulus, stim_data, data_raw_pickled_df)\n",
+    "finished_run()\n",
+    "data_raw_pickled_df"
    ]
   },
   {
@@ -421,7 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle_file('data_meta_pickled/stimulus_df.pickle', agg_df)"
+    "pickle_file('data_meta_pickled/stimulus_df.pickle', data_raw_pickled_df)"
    ]
   }
  ],
