Cleaned up some code and created random fish.

--- a/python_workflows/01 Data Raw to Pickled.ipynb
+++ b/python_workflows/01 Data Raw to Pickled.ipynb
@@ -7,7 +7,7 @@
     "# Raw Data Pickling Function\n",
     "This code pickles raw data downloaded from [Chen et al](https://janelia.figshare.com/articles/Whole-brain_light-sheet_imaging_data/7272617) and converts them into Pandas, Numpy, and Python objects.\n",
     "\n",
-    "To ensure function, load all raw data into [../data/data_raw_from_paper](../data/data_raw_from_paper)"
+    "To ensure function, load all raw data into [../data/data_raw_from_paper](../data/data_raw_from_paper). Also, make sure that all single-digit subject folders (ie subject_1) are changed into double-digit folders (ie subject_01)."
    ]
   },
   {
@@ -56,30 +56,8 @@
     "def save_mat_data(path, subject):\n",
     "    mat = scio.loadmat(path)\n",
     "    mat_dict = {\n",
-    "        \"periods\": mat['data'][0][0][0],\n",
-    "        \"timelists_names\": mat['data'][0][0][1],\n",
-    "        \"stimulus_key_raw\": mat['data'][0][0][2],\n",
     "        \"cell_XYZ\": mat['data'][0][0][3],\n",
-    "        \"anat_stack\": mat['data'][0][0][4],\n",
-    "        \"frame_per_sec\": mat['data'][0][0][5],\n",
-    "        \"behavior_raw\": mat['data'][0][0][6],\n",
-    "        \"num_cells\": mat['data'][0][0][7],\n",
-    "        \"cell_XYZ_norm\": mat['data'][0][0][8],\n",
-    "        \"IX_inval_anat\": mat['data'][0][0][9],\n",
-    "        \"anat_yx\": mat['data'][0][0][10],\n",
-    "        \"anat_yz\": mat['data'][0][0][11],\n",
-    "        \"anat_xz\": mat['data'][0][0][12],\n",
-    "        \"timelists\": mat['data'][0][0][13],\n",
-    "        \"stim_full\": mat['data'][0][0][14],\n",
-    "        \"stim_avr\": mat['data'][0][0][15],\n",
-    "        \"behavior_full\": mat['data'][0][0][16],\n",
-    "        \"behavior_avr\": mat['data'][0][0][17],\n",
-    "#         \"behavior_full_motor\": mat['data'][0][0][18],\n",
-    "#         \"behavior_avr_motor\": mat['data'][0][0][19],\n",
-    "#         \"eye_full_motorseed\": mat['data'][0][0][20],\n",
-    "#         \"eye_avr_motorseed\": mat['data'][0][0][21],\n",
-    "#         \"eye_full\": mat['data'][0][0][22],\n",
-    "#         \"eye_avr\": mat['data'][0][0][23]\n",
+    "        \"stim_full\": mat['data'][0][0][14][0]\n",
     "    }\n",
     "    pickle_file(output_data_dir + subject + '_mat_dict.pickle', mat_dict)"
    ]
@@ -96,34 +74,36 @@
     "        save_path = output_data_dir + subject + '_' + key + '.pickle'\n",
     "        pickle_file(save_path, np.array(f[key]))\n",
     "        if key == 'CellRespZ':\n",
-    "            data_raw_pickled_df.loc[subject] = [subject, None, save_path, np.array(f[key]).shape, None]"
+    "            data_raw_pickled_df.loc[subject] = [subject, None, save_path, np.array(f[key]).shape[0], None]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting save subject_1 16:11:43.568480\n",
-      "Starting save subject_10 16:11:52.914547\n",
-      "Starting save subject_12 16:12:07.243676\n",
-      "Starting save subject_13 16:12:20.625531\n",
-      "Starting save subject_14 16:12:33.534627\n",
-      "Starting save subject_15 16:12:44.479386\n",
-      "Starting save subject_16 16:12:53.924326\n",
-      "Starting save subject_17 16:12:59.593224\n",
-      "Starting save subject_18 16:13:14.778975\n",
-      "Starting save subject_2 16:13:33.269163\n",
-      "Starting save subject_3 16:13:43.491465\n",
-      "Starting save subject_4 16:13:51.267467\n",
-      "Starting save subject_5 16:14:00.912230\n",
-      "Starting save subject_6 16:14:11.511444\n",
-      "Starting save subject_7 16:14:23.712471\n",
-      "Finished saving raw data 16:14:30.591768\n"
+      "Starting save subject_01 20:16:38.918438\n",
+      "Starting save subject_02 20:16:49.482354\n",
+      "Starting save subject_03 20:17:00.972249\n",
+      "Starting save subject_04 20:17:09.642639\n",
+      "Starting save subject_05 20:17:20.325889\n",
+      "Starting save subject_06 20:17:32.167726\n",
+      "Starting save subject_07 20:17:45.036303\n",
+      "Starting save subject_10 20:17:51.388923\n",
+      "Starting save subject_12 20:18:07.438592\n",
+      "Starting save subject_13 20:18:21.811426\n",
+      "Starting save subject_14 20:18:36.458737\n",
+      "Starting save subject_15 20:18:50.093715\n",
+      "Starting save subject_16 20:19:01.447278\n",
+      "Starting save subject_17 20:19:07.983831\n",
+      "Starting save subject_18 20:19:24.142043\n",
+      "Finished saving raw data 20:19:40.951216\n"
      ]
     }
    ],
