--- a/python_workflows/02 Split Stimulus Data.ipynb
+++ b/python_workflows/02 Split Stimulus Data.ipynb
@@ -51,9 +51,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_subject_data(subject):\n",
-    "    timeseries = load_file(data_dir + subject + '_CellRespZ.pickle')\n",
-    "    stimulus = load_file(data_dir + subject + '_mat_dict.pickle')['stim_full']\n",
+    "def load_subject_data(subject_path):\n",
+    "    timeseries = load_file(subject_path)\n",
+    "    stimulus = load_file(subject_path.replace('CellRespZ', 'mat_dict'))['stim_full']\n",
     "    return timeseries, stimulus, np.unique(stimulus)"
    ]
   },
@@ -105,17 +105,41 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting  16:16:58.719382\n",
-      "Saving  subject_1  Stimulus  0\n",
-      "Saving  subject_1  Stimulus  1\n",
-      "Saving  subject_1  Stimulus  2\n",
-      "Saving  subject_1  Stimulus  3\n",
+      "Starting  20:21:31.163425\n",
+      "Saving  subject_01  Stimulus  0\n",
+      "Saving  subject_01  Stimulus  1\n",
+      "Saving  subject_01  Stimulus  2\n",
+      "Saving  subject_01  Stimulus  3\n",
+      "Saving  subject_02  Stimulus  0\n",
+      "Saving  subject_02  Stimulus  1\n",
+      "Saving  subject_02  Stimulus  2\n",
+      "Saving  subject_02  Stimulus  3\n",
+      "Saving  subject_03  Stimulus  0\n",
+      "Saving  subject_03  Stimulus  1\n",
+      "Saving  subject_03  Stimulus  2\n",
+      "Saving  subject_03  Stimulus  3\n",
+      "Saving  subject_04  Stimulus  0\n",
+      "Saving  subject_04  Stimulus  1\n",
+      "Saving  subject_04  Stimulus  2\n",
+      "Saving  subject_04  Stimulus  3\n",
+      "Saving  subject_05  Stimulus  0\n",
+      "Saving  subject_05  Stimulus  1\n",
+      "Saving  subject_05  Stimulus  2\n",
+      "Saving  subject_05  Stimulus  3\n",
+      "Saving  subject_06  Stimulus  1\n",
+      "Saving  subject_06  Stimulus  2\n",
+      "Saving  subject_06  Stimulus  3\n",
+      "Saving  subject_07  Stimulus  1\n",
+      "Saving  subject_07  Stimulus  2\n",
+      "Saving  subject_07  Stimulus  3\n",
       "Saving  subject_10  Stimulus  0\n",
       "Saving  subject_10  Stimulus  1\n",
       "Saving  subject_10  Stimulus  2\n",
@@ -206,211 +230,67 @@
       "Saving  subject_18  Stimulus  12\n",
       "Saving  subject_18  Stimulus  14\n",
       "Saving  subject_18  Stimulus  15\n",
-      "Saving  subject_2  Stimulus  0\n",
-      "Saving  subject_2  Stimulus  1\n",
-      "Saving  subject_2  Stimulus  2\n",
-      "Saving  subject_2  Stimulus  3\n",
-      "Saving  subject_3  Stimulus  0\n",
-      "Saving  subject_3  Stimulus  1\n",
-      "Saving  subject_3  Stimulus  2\n",
-      "Saving  subject_3  Stimulus  3\n",
-      "Saving  subject_4  Stimulus  0\n",
-      "Saving  subject_4  Stimulus  1\n",
-      "Saving  subject_4  Stimulus  2\n",
-      "Saving  subject_4  Stimulus  3\n",
-      "Saving  subject_5  Stimulus  0\n",
-      "Saving  subject_5  Stimulus  1\n",
-      "Saving  subject_5  Stimulus  2\n",
-      "Saving  subject_5  Stimulus  3\n",
-      "Saving  subject_6  Stimulus  1\n",
-      "Saving  subject_6  Stimulus  2\n",
-      "Saving  subject_6  Stimulus  3\n",
-      "Saving  subject_7  Stimulus  1\n",
-      "Saving  subject_7  Stimulus  2\n",
-      "Saving  subject_7  Stimulus  3\n",
-      "Finished  16:18:15.887607\n"
+      "Saving  subject_r1  Stimulus  0\n",
+      "Saving  subject_r1  Stimulus  1\n",
+      "Saving  subject_r1  Stimulus  2\n",
+      "Saving  subject_r1  Stimulus  3\n",
+      "Saving  subject_r1  Stimulus  4\n",
+      "Saving  subject_r1  Stimulus  5\n",
+      "Saving  subject_r1  Stimulus  6\n",
+      "Saving  subject_r1  Stimulus  7\n",
+      "Saving  subject_r1  Stimulus  8\n",
+      "Saving  subject_r1  Stimulus  9\n",
+      "Saving  subject_r1  Stimulus  10\n",
+      "Saving  subject_r1  Stimulus  11\n",
+      "Saving  subject_r1  Stimulus  12\n",
+      "Saving  subject_r1  Stimulus  13\n",
+      "Saving  subject_r1  Stimulus  14\n",
+      "Saving  subject_r1  Stimulus  15\n",
+      "Saving  subject_r1  Stimulus  16\n",
+      "Saving  subject_r1  Stimulus  17\n",
+      "Saving  subject_r1  Stimulus  18\n",
+      "Saving  subject_r1  Stimulus  19\n",
+      "Saving  subject_r1  Stimulus  20\n",
+      "Saving  subject_r1  Stimulus  21\n",
+      "Saving  subject_r1  Stimulus  22\n",
+      "Saving  subject_r1  Stimulus  23\n",
+      "Saving  subject_r2  Stimulus  0\n",
+      "Saving  subject_r2  Stimulus  1\n",
+      "Saving  subject_r2  Stimulus  2\n",
+      "Saving  subject_r2  Stimulus  3\n",
+      "Saving  subject_r2  Stimulus  4\n",
+      "Saving  subject_r2  Stimulus  5\n",
+      "Saving  subject_r2  Stimulus  6\n",
+      "Saving  subject_r2  Stimulus  7\n",
+      "Saving  subject_r2  Stimulus  8\n",
+      "Saving  subject_r2  Stimulus  9\n",
+      "Saving  subject_r2  Stimulus  10\n",
+      "Saving  subject_r2  Stimulus  11\n",
+      "Saving  subject_r2  Stimulus  12\n",
+      "Saving  subject_r2  Stimulus  13\n",
+      "Saving  subject_r2  Stimulus  14\n",
+      "Saving  subject_r2  Stimulus  15\n",
+      "Saving  subject_r2  Stimulus  16\n",
+      "Saving  subject_r2  Stimulus  17\n",
+      "Saving  subject_r2  Stimulus  18\n",
+      "Saving  subject_r2  Stimulus  19\n",
+      "Saving  subject_r2  Stimulus  20\n",
+      "Saving  subject_r2  Stimulus  21\n",
+      "Saving  subject_r2  Stimulus  22\n",
+      "Saving  subject_r2  Stimulus  23\n",
+      "Finished  20:23:00.857182\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>subject</th>\n",
-       "      <th>stimulus</th>\n",
-       "      <th>rel_path</th>\n",
-       "      <th>timepoints_count</th>\n",
-       "      <th>timepoints</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>subject_1</th>\n",
-       "      <td>subject_1</td>\n",
-       "      <td>None</td>\n",
-       "      <td>data_raw_pickled/subject_1_CellRespZ.pickle</td>\n",
-       "      <td>(2880, 83205)</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>subject_10</th>\n",
-       "      <td>subject_1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>data_raw_pickled/subject_1_stimulus_0_CellResp...</td>\n",
-       "      <td>720</td>\n",
-       "      <td>Int64Index([ 150,  151,  152,  153,  154,  155...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>subject_12</th>\n",
-       "      <td>subject_1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>data_raw_pickled/subject_1_stimulus_2_CellResp...</td>\n",
-       "      <td>720</td>\n",
-       "      <td>Int64Index([   0,    1,    2,    3,    4,    5...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>subject_13</th>\n",
-       "      <td>subject_1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>data_raw_pickled/subject_1_stimulus_3_CellResp...</td>\n",
-       "      <td>720</td>\n",
-       "      <td>Int64Index([  30,   31,   32,   33,   34,   35...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>subject_14</th>\n",
-       "      <td>subject_14</td>\n",
-       "      <td>None</td>\n",
-       "      <td>data_raw_pickled/subject_14_CellRespZ.pickle</td>\n",
-       "      <td>(3890, 72412)</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>subject_62</th>\n",
-       "      <td>subject_6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>data_raw_pickled/subject_6_stimulus_2_CellResp...</td>\n",
-       "      <td>1080</td>\n",
-       "      <td>Int64Index([ 100,  101,  102,  103,  104,  105...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>subject_63</th>\n",
-       "      <td>subject_6</td>\n",
-       "      <td>3</td>\n",
-       "      <td>data_raw_pickled/subject_6_stimulus_3_CellResp...</td>\n",
-       "      <td>1620</td>\n",
-       "      <td>Int64Index([   0,    1,    2,    3,    4,    5...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>subject_71</th>\n",
-       "      <td>subject_7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>data_raw_pickled/subject_7_stimulus_1_CellResp...</td>\n",
-       "      <td>550</td>\n",
-       "      <td>Int64Index([  24,   25,   26,   27,   28,   29...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>subject_72</th>\n",
-       "      <td>subject_7</td>\n",
-       "      <td>2</td>\n",
-       "      <td>data_raw_pickled/subject_7_stimulus_2_CellResp...</td>\n",
-       "      <td>550</td>\n",
-       "      <td>Int64Index([  99,  100,  101,  102,  103,  104...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>subject_73</th>\n",
-       "      <td>subject_7</td>\n",
-       "      <td>3</td>\n",
-       "      <td>data_raw_pickled/subject_7_stimulus_3_CellResp...</td>\n",
-       "      <td>550</td>\n",
-       "      <td>Int64Index([   0,    1,    2,    3,    4,    5...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>128 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               subject stimulus  \\\n",
-       "subject_1    subject_1     None   \n",
-       "subject_10   subject_1        0   \n",
-       "subject_12   subject_1        2   \n",
-       "subject_13   subject_1        3   \n",
-       "subject_14  subject_14     None   \n",
-       "...                ...      ...   \n",
-       "subject_62   subject_6        2   \n",
-       "subject_63   subject_6        3   \n",
-       "subject_71   subject_7        1   \n",
-       "subject_72   subject_7        2   \n",
-       "subject_73   subject_7        3   \n",
-       "\n",
-       "                                                     rel_path  \\\n",
-       "subject_1         data_raw_pickled/subject_1_CellRespZ.pickle   \n",
-       "subject_10  data_raw_pickled/subject_1_stimulus_0_CellResp...   \n",
-       "subject_12  data_raw_pickled/subject_1_stimulus_2_CellResp...   \n",
-       "subject_13  data_raw_pickled/subject_1_stimulus_3_CellResp...   \n",
-       "subject_14       data_raw_pickled/subject_14_CellRespZ.pickle   \n",
-       "...                                                       ...   \n",
-       "subject_62  data_raw_pickled/subject_6_stimulus_2_CellResp...   \n",
-       "subject_63  data_raw_pickled/subject_6_stimulus_3_CellResp...   \n",
-       "subject_71  data_raw_pickled/subject_7_stimulus_1_CellResp...   \n",
-       "subject_72  data_raw_pickled/subject_7_stimulus_2_CellResp...   \n",
-       "subject_73  data_raw_pickled/subject_7_stimulus_3_CellResp...   \n",
-       "\n",
-       "           timepoints_count                                         timepoints  \n",
-       "subject_1     (2880, 83205)                                               None  \n",
-       "subject_10              720  Int64Index([ 150,  151,  152,  153,  154,  155...  \n",
-       "subject_12              720  Int64Index([   0,    1,    2,    3,    4,    5...  \n",
-       "subject_13              720  Int64Index([  30,   31,   32,   33,   34,   35...  \n",
-       "subject_14    (3890, 72412)                                               None  \n",
-       "...                     ...                                                ...  \n",
-       "subject_62             1080  Int64Index([ 100,  101,  102,  103,  104,  105...  \n",
-       "subject_63             1620  Int64Index([   0,    1,    2,    3,    4,    5...  \n",
-       "subject_71              550  Int64Index([  24,   25,   26,   27,   28,   29...  \n",
-       "subject_72              550  Int64Index([  99,  100,  101,  102,  103,  104...  \n",
-       "subject_73              550  Int64Index([   0,    1,    2,    3,    4,    5...  \n",
-       "\n",
-       "[128 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "starting_run()\n",
-    "for subject in list_subjects():\n",
-    "    timeseries, stimulus_timeseries, stimulus_values = load_subject_data(subject)\n",
+    "for row in data_raw_pickled_df.copy().itertuples():\n",
+    "    timeseries, stimulus_timeseries, stimulus_values = load_subject_data(row.rel_path)\n",
     "    df_full = create_data_df(timeseries, stimulus_timeseries)\n",
     "    for stimulus in stimulus_values:\n",
     "        stim_data = extract_stimulus_data(df_full, stimulus)\n",
-    "        save_stim_data(subject, stimulus, stim_data, data_raw_pickled_df)\n",
-    "finished_run()\n",
-    "data_raw_pickled_df"
+    "        save_stim_data(row.subject, stimulus, stim_data, data_raw_pickled_df)\n",
+    "finished_run()"
    ]
   },
   {
