--- a/python_workflows/03 Create PCA Models.ipynb
+++ b/python_workflows/03 Create PCA Models.ipynb
@@ -83,6 +83,39 @@
     "    model_df.loc[row.subject + stimulus_string] = [row.subject, row.stimulus, save_path, row.rel_path, n_components, sum_explained_variance]\n",
     "pickle_file('data_meta_pickled/pca_models_pickled_df.pickle', model_df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "subject                                                          subject_r2\n",
+       "stimulus                                                               None\n",
+       "model_path                pca_models_pickled/subject_r2_PCA_model_num_co...\n",
+       "orig_data_path                 data_raw_pickled/subject_r2_CellRespZ.pickle\n",
+       "n_components                                                             10\n",
+       "sum_explained_variance                                             0.383275\n",
+       "Name: subject_r2, dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_df.loc['subject_r2']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
