--- a/python_workflows/04 Neuron Loadings and Component Geographic Scoring.ipynb
+++ b/python_workflows/04 Neuron Loadings and Component Geographic Scoring.ipynb
@@ -68,6 +68,9 @@
    "outputs": [],
    "source": [
     "def calc_component_loadings(model):\n",
+    "    #Note that we take the absolute value of all eigenvalues. This is because we want\n",
+    "    #to capture the relationship between components and neurons, not necessarily the\n",
+    "    #direction of that relationship.\n",
     "    dataset = np.absolute(model.components_)\n",
     "    neuron_sums = dataset.sum(axis=0, keepdims=True)\n",
     "    return pd.DataFrame(dataset / neuron_sums).transpose()"
